// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`connectHorizontal > connectHorizontal opens channel > system events 1`] = `
[
  {
    "data": {
      "messageHash": "(hash)",
    },
    "method": "XcmpMessageSent",
    "section": "xcmpQueue",
  },
]
`;

exports[`connectHorizontal > connectHorizontal opens channel > system events 2`] = `
[
  {
    "data": {
      "error": "TooExpensive",
      "messageHash": "(hash)",
      "weight": {
        "proofSize": 0,
        "refTime": 600000000,
      },
    },
    "method": "Fail",
    "section": "xcmpQueue",
  },
]
`;
